--- a/src/Components/NavHome/NavHome.css
+++ b/src/Components/NavHome/NavHome.css
@@ -1,10 +1,11 @@
 .NavItems {
-  background: linear-gradient(
+  /* background: linear-gradient(
     90deg,
     rgb(121, 1, 129) 0%,
     rgba(140, 0, 189, 1) 46%,
     rgba(115, 0, 255, 1) 100%
-  );
+  ); */
+  background-color: transparent;
   height: 60px;
   display: flex;
   justify-content: center;
@@ -60,6 +61,7 @@
   }
 
   .nav-menu {
+    overflow: none;
     display: flex;
     flex-direction: column;
     width: 100%;
